--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,31 @@
 services:
   user_service_db:
     image: postgres:latest
+    container_name: user_service_db
     environment:
       POSTGRES_DB: user_service_db
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
     ports:
-      - "5433:5433"
+      - "5433:5432"
+    volumes:
+      - user_service_db_data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
+    container_name: pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
+      # PGADMIN_CONFIG_SERVER_MODE: "False" # Required to enable loading servers.json
     ports:
-      - "8080:80"
+      - "5050:80"
     depends_on:
       - user_service_db
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+      # - ./pgadmin-config/servers.json:/pgadmin4/servers.json
+
+volumes:
+  user_service_db_data:
+  pgadmin_data:
